# mlighter

./: Dockerfile  Manual.odt  README.md  initScript.bash
Arm64/: Dockerfile  README.md
backend/: MLighter.py
backend/codereader/: codeInfo.py  importInfo.py
backend/dataset/: mlData.py  mlDataAudio.py  mlDataImage.py  mlDataStructure.py
backend/evasions/: evStrategy.py  mlEvasion.py  mlEvasionContinousNoise.py  mlEvasionDiscreetNoise.py  testGen.py
backend/model/: mlModel.py  mlModelSkLearn.py
backend/search/: evStra.py  evStra.py~  genAlg.py  genAlgMul.py
docker/: Dockerfile  initScript.bash  notes.txt
dockerComplements/: script.sh
frontend/: WholeInterface.ipynb
mlighter/backend/: MLighter.py
mlighter/backend/codereader/: codeInfo.py  importInfo.py
mlighter/backend/dataset/: mlData.py  mlDataAudio.py  mlDataDescription.py  mlDataImage.py  mlDataStructure.py
mlighter/backend/evasions/: evStrategy.py  (+5 more)
mlighter/frontend/: Interface.ipynb  WholeInterface.ipynb  WholeInterfaceUpdated.ipynb  frontend_lib.py  runner.sh  tablaPython.csv
mlighter/tests/: main.py  mainCode.py  mainSearch.py  mainTester.py  mainTesterR.py
mlighter/utils/: .gitignore  MANIFEST.in  README.md  install.sh  requirements.txt  setup.cfg
mlighter/utils/src/mlighter_utils/: constants.py  conversion.py  core.py  training.py
mlighter/utils/tests/: requirements.txt  test_conversion.py  test_training.py
tests/: main.py  mainCode.py  mainTester.py
tests/example/: inputLogReg.bin.npy  iris.csv  iris.joblib  sklearnLogReg.py  sklearnLogRegTest.py  sklearnLogRegTraining.py
(+12 files in other folders)
