[metadata]
name = mlighter-utils
version = 1.1.1
author = Aidan Dakhama
author_email = ai.dakhama@gmail.com
description = A set of utility functions for testing templates within mlighter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dakaidan/FuzzingUtils
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pandas
    scikit-learn
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
